# ai-chat

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.gpu.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_local.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  dependencies.py  enums.py  logging_config.py  main.py  schemas.py  state.py
app/routers/: chats.py  generate.py  system.py
app/services/: __init__.py  chat_store.py  model_loader.py  ollama_client.py
static/: index.html  loading.html
static/css/: base.css  chat.css  loading.css
static/js/: chat.js  loading.js
tests/: conftest.py  test_chat_store.py  test_chats_routes.py  test_generate_routes.py  test_ollama_client.py  test_state.py  test_system_routes.py
