[project]
name = "ai-fable"
version = "2.1.0"
description = "Web chat + REST API for a Gemma-4 coder model, served via Ollama"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "logs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line length is enforced by the formatter, not the linter
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom relies on calling Depends()/Form()/File()
# in argument defaults — that's correct usage here, not the mutable-default
# footgun B008 normally guards against.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Form", "fastapi.File"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
